--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
 # Backend / API
 MONGO_URI=mongodb://localhost:27017/airr_poc
 
-# Gemini via OpenAI SDK (Gemini-compatible endpoint)
-MODEL_NAME=gemini-2.5-flash
-MODEL_API_KEY=your_gemini_api_key
-OPENAI_BASE_URL=https://generativelanguage.googleapis.com/openai/v1
+# Model settings (default OpenAI; set OpenRouter to try other models)
+MODEL_NAME=gpt-4o-2024-08-06
+MODEL_API_KEY=your_api_key_here
+OPENAI_BASE_URL=https://api.openai.com/v1
+# For OpenRouter, set:
+# OPENAI_BASE_URL=https://openrouter.ai/api/v1
+# MODEL_NAME=openrouter/anthropic/claude-3.5-sonnet (or another OpenRouter model id)
+# MODEL_EXTRA_HEADERS={"HTTP-Referer":"https://your-site.com","X-Title":"AIRR POC"}
 
 # Cloudinary (raw uploads for Excel/PDF)
 CLOUDINARY_URL=cloudinary://KEY:SECRET@CLOUD_NAME
