Added graph client

--- a/.env.example
+++ b/.env.example
@@ -20,5 +20,13 @@ CLOUDINARY_BASE_FOLDER=airr-poc
 # On Windows: C:\\Program Files\\LibreOffice\\program\\soffice.exe
 LIBREOFFICE_PATH=
 
+# Microsoft Graph / Office 365 (backend)
+GRAPH_TENANT_ID=
+GRAPH_CLIENT_ID=
+GRAPH_CLIENT_SECRET=
+GRAPH_DRIVE_ID=
+GRAPH_BASE_URL=https://graph.microsoft.com/v1.0
+CONVERTER_BACKEND=libreoffice
+
 # Frontend
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
